@@ -504,3 +504,4 @@ v0.75.3:
 		      towny_maxplots: -1
 		      
     - Fixed old resident deletion for the new config system using seconds instead of milliseconds.
+    - Towny now correctly defaults to Bukkits Permissions if using_permissions is set to false in the config.
